# omega-zero

./: .gitignore  CLAUDE.md  DATA_PREPARATION.md  IMPLEMENTATION_02_NeuralNetwork.md  IMPLEMENTATION_AGENT.md  NEURAL_NETWORK.md  README.md  REVIEW_01_ChessGame.md  REVIEW_AGENT.md  REVIEW_NOTES_NN.md  TEST_GUIDELINES.md  TRAINING_PIPELINE.md  pyproject.toml  requirements.txt
notebooks/: check_neural_network_paramter_count.ipynb  chess_game_exploration.ipynb  small_data_prep_experiment.ipynb  test_chess_game.ipynb  test_mcts.ipynb  test_neural_network_component.ipynb  toy_game_workflow.ipynb  toy_mcts_search.ipynb  try_plot_model.ipynb  try_plot_model_v2.ipynb
notebooks/data/processed/: test_1k.jsonl  test_1k_meta.json
specs/: BOARD_REPRESENTATION.md  MCTS.md  TRAINING_PIPELINE.md
src/: chess_game.py  data_preparation.py  mcts.py  neural_network.py
tests/: test_chess_game.py  test_data_preparation.py  test_mcts.py  test_neural_network.py
